--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material/textfield": "^13.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
+    "classnames": "^2.3.1",
     "dashboard": "^0.0.1",
     "immer": "^8.0.1",
+    "input-material-ui": "^2.9.0",
+    "install": "^0.13.0",
     "material": "^0.4.3",
+    "npm": "^7.24.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
@@ -17,6 +24,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
+    "routes": "^2.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
